--- a/styles/styles.css
+++ b/styles/styles.css
@@ -590,6 +590,8 @@ p {
   border-bottom: 15px solid var(--all-black);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  grid-row: span 2;
 }
 
 .index-section-about {
@@ -643,7 +645,7 @@ p {
 .index-section-activities,
 .index-section-team,
 footer {
-  padding: 0.5rem 2rem;
+  padding: 2rem 2rem;
 }
 
 .index-section-info span,
@@ -1003,12 +1005,56 @@ footer ul {
   .index-section-info {
     display: grid;
     grid-template-columns: subgrid;
+    /* grid-template-rows: subgrid; */
     grid-column: 4/8;
-    grid-row: 1/2;
+    grid-row: 1/3;
     width: 100%;
     border-left: 15px solid var(--all-black);
     border-bottom: 0;
     z-index: 1;
+  }
+
+  .info-bg-text {
+    grid-column: span 7;
+    overflow: hidden;
+
+    /* one line */
+    text-overflow: clip;
+    overflow: hidden;
+    white-space: nowrap;
+
+    /* style */
+    color: var(--primary-black);
+    font-family: 'Climate Crisis', serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: 'YEAR' 2000;
+    font-size: 8rem;
+    text-transform: uppercase;
+    text-shadow: var(--title-stroke-width-neg) var(--title-stroke-width-neg) 0
+        var(--primary-medium-blue),
+      var(--title-stroke-width) var(--title-stroke-width-neg) 0
+        var(--primary-medium-blue),
+      var(--title-stroke-width-neg) var(--title-stroke-width) 0
+        var(--primary-medium-blue),
+      var(--title-stroke-width) var(--title-stroke-width) 0
+        var(--primary-medium-blue);
+  }
+
+  .index-content > p:nth-of-type(1) {
+    grid-column: span 7;
+    grid-row: 3;
+    margin-top: -7rem;
+  }
+
+  .index-content > p:nth-of-type(2) {
+    grid-column: span 7;
+    margin-top: -5rem;
+  }
+
+  .index-content > p:nth-of-type(3) {
+    grid-column: span 7;
   }
 
   .index-content > img:first-of-type {
@@ -1025,7 +1071,7 @@ footer ul {
   .index-section-about {
     margin-top: 2rem;
     grid-column: 1/5;
-    grid-row: 2/3;
+    grid-row: 4/5;
     border-right: 15px solid var(--all-black);
     border-bottom: 0;
     z-index: 1;
@@ -1046,7 +1092,7 @@ footer ul {
     display: grid;
     grid-template-columns: subgrid;
     grid-column: 4/8;
-    grid-row: 2/3;
+    grid-row: 4/5;
     z-index: 0;
     border-left: 15px solid var(--all-black);
     border-bottom: 0;
