--- a/styles/styles.css
+++ b/styles/styles.css
@@ -643,9 +643,12 @@ p {
 .index-section-info,
 .index-section-about,
 .index-section-activities,
-.index-section-team,
-footer {
+.index-section-team {
   padding: 2rem 2rem;
+}
+
+footer {
+  padding: 0rem 2rem 2rem 2rem;
 }
 
 .index-section-info span,
@@ -871,6 +874,7 @@ footer {
   grid-template-columns: repeat(2, 1fr);
   column-gap: 2rem;
 }
+
 header .logo {
   height: 60px;
   width: 60px;
@@ -890,6 +894,11 @@ footer div > div {
   display: flex;
   gap: 0.8rem;
   margin-bottom: 1rem;
+}
+
+footer > div:nth-of-type(3),
+footer > p {
+  opacity: 0.5;
 }
 
 footer h5 {
@@ -1171,4 +1180,18 @@ footer ul {
   .index-content img:nth-of-type(3) {
     grid-column: span 7;
   }
+}
+
+/****************** Decorative ******************/
+
+.decorative-S-line {
+  display: grid;
+  margin-top: -16vw;
+  grid-column: span 7;
+  overflow: hidden;
+  place-items: center;
+}
+
+.decorative-S-line > img {
+  width: 200%;
 }
