--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1001,6 +1001,38 @@ button {
   color: var(--primary-black) !important;
 }
 
+/****************** HOMEPAGE Decorative ******************/
+
+.decorative-S-line {
+  display: grid;
+  margin-top: -16vw;
+  grid-column: span 7;
+  overflow: hidden;
+  place-items: center;
+}
+
+.decorative-S-line > img {
+  width: 200%;
+}
+
+img.decorative-S-green,
+img.decorative-S-blue {
+  all: unset;
+  position: absolute;
+  z-index: 5;
+}
+img.decorative-S-green {
+  width: 70vw;
+  left: 0;
+  margin-top: -4vh;
+  margin-left: -20vw;
+}
+img.decorative-S-blue {
+  width: 30vw;
+  margin-right: calc(-30vw / 1.5);
+  right: 0;
+}
+
 /* 
   ========================================================================================
   Desktop styles
@@ -1186,27 +1218,23 @@ button {
   .index-content img:nth-of-type(3) {
     grid-column: span 7;
   }
-}
 
-/****************** HOMEPAGE Decorative ******************/
-
-.decorative-S-line {
-  display: grid;
-  margin-top: -16vw;
-  grid-column: span 7;
-  overflow: hidden;
-  place-items: center;
-}
-
-.decorative-S-line > img {
-  width: 200%;
-}
-
-.decoratve-S-blue,
-.decoratve-S-green {
-  position: absolute;
-  /* background-color: red; */
-  width: 100px;
-  top: 0;
-  z-index: 5;
+  img.decorative-S-green,
+  img.decorative-S-blue {
+    all: unset;
+    position: absolute;
+    z-index: 5;
+  }
+  img.decorative-S-green {
+    width: 50vw;
+    left: 0;
+    margin-top: -10vw;
+    margin-left: -10vw;
+  }
+  img.decorative-S-blue {
+    width: 30vw;
+    max-width: 400px;
+    margin-right: calc(-30vw / 1.5);
+    right: 0;
+  }
 }
