--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1126,6 +1126,34 @@ img.decorative-S-blue {
     align-self: start;
   }
 
+  .index-container {
+    background-image: url('../images/index/snowmountains2.jpg');
+    background-size: 100vw;
+    height: 100vh;
+    display: flex;
+    width: 100%;
+  }
+
+  .index-container h1 {
+    font-size: 5rem;
+  }
+
+  .index-container article {
+    width: 100%;
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+  }
+
+  .index-container button {
+    background-color: #003366;
+  }
+
+  .index-container a {
+    text-decoration: none;
+    color: white;
+  }
+
   .home-container .index-section-about h2 {
     text-align: left;
   }
