--- a/styles/styles.css
+++ b/styles/styles.css
@@ -584,6 +584,11 @@ main h2 {
   padding: 0rem 1.25rem;
 }
 
+.home-header .nav-bar ul li:last-child {
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
 .home-header .logo {
   height: 60px;
   width: 60px;
@@ -731,11 +736,8 @@ main h2 {
   margin: 0.5rem 0;
 }
 
-.about-anchor {
-  display: block;
-  width: 50px;
-  height: 50px;
-  margin: -8rem;
+.anchor {
+  height: 1px;
 }
 
 .index-section-info > * {
@@ -1103,6 +1105,15 @@ img.decorative-S-blue {
 
 /* using the same breakpoint as above */
 @media (min-width: 37.5em) {
+  .anchor-about {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .home-header .nav-bar ul li:last-child {
+    text-align: center;
+    width: 100%;
+    margin-bottom: 0rem;
+  }
   .index-content {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
